testing/tests/ui/cycle.stderr
error: cyclic dependency in graph [
           "\"$WORKSPACE/target/tests/trybuild/rinja_testing/templates/cycle2.html/" --> \"$WORKSPACE/target/tests/trybuild/rinja_testing/templates/cycle1.html/"",
           "\"$WORKSPACE/target/tests/trybuild/rinja_testing/templates/cycle1.html/" --> \"$WORKSPACE/target/tests/trybuild/rinja_testing/templates/cycle1.html/"",
       ]
 --> tests/ui/cycle.rs:4:12
  |
4 | #[template(path = "cycle2.html")]
  |            ^^^^
